# Cosmo_Open_MP

./: .gitignore  CMakeLists.txt  README.md  REPORTE_REVISION_TECNICA.md
bench/: results_2steps.csv  run_bench.sh
docs/: slides.html  slides.qmd
include/: cic.hpp  config.hpp  diagnostics.hpp  force_interp.hpp  gradient.hpp  ic_reader.hpp  integrator.hpp  output.hpp  poisson_fft.hpp  simulation.hpp  timer.hpp  types.hpp
scripts/: ICs.py  animation.py  viewer.py
src/: cic.cpp  diagnostics.cpp  force_interp.cpp  gradient.cpp  ic_reader.cpp  integrator.cpp  main.cpp  output.cpp  poisson_fft.cpp  simulation.cpp
tests/: test_cic.cpp  test_diagnostics.cpp  test_framework.hpp  test_integrator.cpp  test_main.cpp  test_poisson.cpp
